# textray

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  conanfile.py
.ci/: fetch_system_dependencies.sh
.github/workflows/: build.yml
include/: application.hpp  camera.hpp  client.hpp  connection.hpp  context.hpp  context_impl.hpp  core.hpp  datastream.hpp  floorplan.hpp  input_datastream.hpp  lambda_visitor.hpp  output_datastream.hpp  overloaded.hpp  point.hpp  server.hpp  socket.hpp  tile.hpp  ui.hpp  vector2d.hpp
src/: application.cpp  camera.cpp  client.cpp  connection.cpp  context_impl.cpp  main.cpp  server.cpp  socket.cpp  ui.cpp
